[gd_scene load_steps=3 format=3 uid="uid://bfg2ynrt0nfph"]

[ext_resource type="Script" uid="uid://ddthrsh7r8gkf" path="res://main_menu.gd" id="1_06t4h"]

[sub_resource type="Theme" id="Theme_rhts7"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_06t4h")

[node name="title" type="Label" parent="."]
offset_left = 1.0
offset_right = 385.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 20
text = "横板闯关小demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 43.0
offset_right = 384.0
offset_bottom = 216.0
theme = SubResource("Theme_rhts7")

[node name="MAIN_MENU" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="play" type="Button" parent="CenterContainer/MAIN_MENU"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Play"

[node name="setting" type="Button" parent="CenterContainer/MAIN_MENU"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "settings"

[node name="credits" type="Button" parent="CenterContainer/MAIN_MENU"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "credits"

[node name="quit" type="Button" parent="CenterContainer/MAIN_MENU"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "quit"

[node name="seteing_menu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="back" type="Button" parent="CenterContainer/seteing_menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Back"

[node name="Full__screen2" type="Button" parent="CenterContainer/seteing_menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Fullscreen"

[node name="mainslider" type="HSlider" parent="CenterContainer/seteing_menu"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="MAIN VOLUME" type="Label" parent="CenterContainer/seteing_menu/mainslider"]
custom_minimum_size = Vector2(0, -16)
layout_mode = 0
offset_top = -8.0
offset_right = 64.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 10
text = "Main Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="musicslider" type="HSlider" parent="CenterContainer/seteing_menu"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="MUSIC VOLUME" type="Label" parent="CenterContainer/seteing_menu/musicslider"]
layout_mode = 0
offset_left = -157.0
offset_top = -30.0
offset_right = 219.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "MUSIC Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfxslider" type="HSlider" parent="CenterContainer/seteing_menu"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SFX VOLUME" type="Label" parent="CenterContainer/seteing_menu/sfxslider"]
custom_minimum_size = Vector2(0, -16)
layout_mode = 0
offset_top = -8.0
offset_right = 57.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 10
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="credits_menu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="CenterContainer/credits_menu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Huaziqi
Tangcufish
TCWeixu
yy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="CenterContainer/credits_menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
text = "Back"

[connection signal="pressed" from="CenterContainer/MAIN_MENU/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/MAIN_MENU/setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="CenterContainer/MAIN_MENU/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/MAIN_MENU/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/seteing_menu/back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="CenterContainer/seteing_menu/Full__screen2" to="." method="_on_full__screen_2_toggled"]
[connection signal="value_changed" from="CenterContainer/seteing_menu/mainslider" to="." method="_on_voice_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/seteing_menu/mainslider" to="." method="_on_mainslider_value_changed"]
[connection signal="value_changed" from="CenterContainer/seteing_menu/musicslider" to="." method="_on_voice_slider_2_value_changed"]
[connection signal="value_changed" from="CenterContainer/seteing_menu/musicslider" to="." method="_on_musicslider_value_changed"]
[connection signal="value_changed" from="CenterContainer/seteing_menu/sfxslider" to="." method="_on_sfxslider_value_changed"]
[connection signal="value_changed" from="CenterContainer/seteing_menu/sfxslider" to="." method="_on_voice_slider_3_value_changed"]
[connection signal="pressed" from="CenterContainer/credits_menu/back" to="." method="_on_back_pressed"]
